--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ background: linear-gradient(90deg, rgb(241, 70, 110) 0%, rgb(233, 124, 131) 0%, 
     font-family: Arial, Helvetica, sans-serif;
   }
   h2{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
   }
   button{
     background-color: #ffeef4;
